2008-08-19  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.c: Cleaned up a few things.

2008-08-19  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-index.c (indexer_update_word): Print
	error+cause if any insertion to the index fails.
	* src/tracker-indexer/tracker-indexer.c (create_update_item): Remove
	useless message, since there's already a similar one previous to it.

2008-08-18  Martyn Russell  <martyn@imendio.com>

	* Makefile.decl:
	* tracker.spec:
	* README:
	* configure.ac:
	* acinclude.m4:
	* libtracker-gtk.pc.in: Fixed some trailing whitespace issues.

2008-08-18  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-daemon.c: Use TrackerDaemonPrivate not Priv.
	* src/trackerd/tracker-db.c: Removed commented out code.

	* src/trackerd/tracker-dbus.c:
	* src/trackerd/tracker-files.[ch]: Use the processor for the
	org.freedesktop.Tracker.Files.{Create|Delete} interfaces so we
	make use of the processor's queues and do things all one way. This
	includes checking ignore lists, etc.

	* src/trackerd/tracker-keywords.c: Use TrackerKeywordsPrivate not Priv.
	* src/trackerd/tracker-processor.[ch]: Add public functions to
	check/update/delete files. This simply makes the functions we
	already have public which send files to the indexer to
	check/update/delete.

	* src/trackerd/tracker-search.c: Use TrackerSearchPrivate not Priv.

2008-08-18  Mikael Ottela    <mikael.ottela@ixonos.com>

	* src/trackerd/tracker-rdf-query.c: Minor bug fix to rdf-queries.

2008-08-18  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-module.[ch]:
	* src/tracker-indexer/tracker-indexer.c:
	* src/tracker-indexer/tracker-module.h: Move the module_name parameter
	from TrackerFile to PathInfo, such information is internal to the
	indexer, and modules shouldn't have to care about their own name.

2008-08-18  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-module.c