@@ -131,8 +131,8 @@ struct TrackerIndexerPrivate {
 	guint files_indexed;
 	guint items_processed;
 
-	gboolean in_transaction;
-	gboolean is_paused;
+	guint in_transaction : 1;
+	guint is_paused : 1;
 };
 
 struct PathInfo {
@@ -1282,7 +1282,7 @@ handle_metadata_add (TrackerIndexer *indexer,
 	gchar *joined, *dirname, *basename;
 	gint len;
 
-	g_return_val_if_fail (error == NULL || *error == NULL, NULL);
+	g_return_val_if_fail (error == NULL || *error == NULL, FALSE);
 
 	service_def = tracker_ontology_get_service_type_by_name (service_type);
 	if (!service_def) {
