@@ -1,3 +1,11 @@
+2008-08-19  Carlos Garnacho  <carlos@imendio.com>
+
+	* src/tracker-indexer/modules/evolution.c (get_mbox_attachment_uri):
+	Also remove ".sbd" from the mbox uris here.
+	* src7tracker-indexer/tracker-indexer.c (struct
+	TrackerIndexerPrivate): pack booleans into guints.
+	(handle_metadata_add): Actually return a boolean if checks fail.
+
 2008-08-19  Martyn Russell  <martyn@imendio.com>
 
 	* src/libtracker-common/tracker-config.c: Cleaned up a few things.
